--- a/src/components/Controls/styles.module.css
+++ b/src/components/Controls/styles.module.css
@@ -1,20 +1,20 @@
 .wrapper {
   margin: 1rem;
+  padding-top: 4rem;
 }
 
-@media print {
-  .wrapper {
-    display: none;
-  }
+.control {
+  margin-bottom: 1rem;
 }
 
 .colorPicker {
   margin-bottom: 1rem;
 }
 
-.fgChooserHeader,
-.sizeChooserHeader {
+.controlHeading {
   margin: .25rem 0;
+  font-size: .8rem;
+  text-transform: uppercase;
 }
 
 .fgChooser,
