--- a/src/components/Header/styles.module.css
+++ b/src/components/Header/styles.module.css
@@ -1,9 +1,24 @@
+:root {
+  --near-black: #111111;
+  --near-white: #F4F4F4;
+}
+
 .wrapper {
-  margin: 1rem;
+  position: relative;
+  z-index: 10;
+  display: flex;
+  justify-content: space-between;
+  background-color: var(--near-black);
+  padding: 1rem;
+}
+
+.title {
+  margin: 0;
+  font-size: 1rem;
 }
 
 .logo {
-  color: black;
+  color: var(--near-white);
   text-decoration: none;
 }
 
