--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -100,12 +100,21 @@ textarea {
 body,
 input,
 textarea {
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-family: "PT Sans", Verdana, Geneva, Tahoma, sans-serif;
 }
 
 input,
 textarea {
   color: inherit;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "PT Sans Caption", Verdana, Geneva, Tahoma, sans-serif;  
 }
 
 /* ==========================================================================
