Adds print button, fixes page title

--- a/src/components/Header/styles.module.css
+++ b/src/components/Header/styles.module.css
@@ -22,6 +22,27 @@
   text-decoration: none;
 }
 
+.actions {
+  display: flex;
+}
+
+:root {
+  --near-white: #F4F4F4;
+  --light-green: #9EEBCF;
+}
+
+.link {
+  border-bottom: 1px dotted var(--near-white);
+  text-decoration: none;
+  color: var(--near-white);
+}
+
+.link:hover {
+  color: var(--light-green);
+  border-bottom-color: var(--light-green);
+  cursor: pointer;
+}
+
 @media print {
   .wrapper {
     display: none;
